--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,89 +1,24 @@
-antlr4-python3-runtime==4.11.1
-antlr4-tools==0.1
-astroid==2.15.0
-bandit==1.7.5
-beautifulsoup4==4.11.1
-black==22.10.0
-certifi==2021.10.8
-charset-normalizer==2.0.12
 circlify==0.15.0
 click==8.1.3
 colorama==0.4.6
 contourpy==1.0.7
 cycler==0.11.0
-dill==0.3.6
-dodgy==0.2.1
-flake8==5.0.4
-flake8-polyfill==1.0.2
 Flask==2.2.3
-fonttools==4.39.2
-gitdb==4.0.10
-GitPython==3.1.31
-idna==3.3
-install-jdk==0.3.0
-isort==5.12.0
+Flask-Cors==3.0.10
+fonttools==4.39.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
-joblib==1.2.0
-kaleido==0.2.1
 kiwisolver==1.4.4
-lazy-object-proxy==1.9.0
-markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 matplotlib==3.7.1
-mccabe==0.7.0
-mdurl==0.1.2
-mpmath==1.2.1
-mypy==1.1.1
-mypy-extensions==1.0.0
 numpy==1.24.2
-orjson==3.8.7
 packaging==23.0
-pandas==1.5.3
-pathspec==0.10.2
-pbr==5.11.1
-pep8-naming==0.10.0
 Pillow==9.4.0
-platformdirs==2.5.4
-plotly==5.13.0
-poetry-semver==0.1.0
-prospector==1.9.0
-pycodestyle==2.9.1
-pydocstyle==6.3.0
-pyflakes==2.5.0
-Pygments==2.14.0
-pylint==2.17.0
-pylint-celery==0.3
-pylint-django==2.5.3
-pylint-flask==0.6
-pylint-plugin-utils==0.7
+plotly==5.14.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
-pytz==2022.7.1
-pywin32==303
-PyYAML==6.0
-requests==2.27.1
-requirements-detector==1.1.0
-rich==13.3.2
-scikit-learn==1.2.2
-scipy==1.10.1
-setoptconf-tmp==0.3.1
 six==1.16.0
-smmap==5.0.0
-snowballstemmer==2.2.0
-soupsieve==2.3.2.post1
-stevedore==5.0.0
-tenacity==8.2.1
-threadpoolctl==3.1.0
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.11.6
-traitlets==5.1.1
-truelearn @ file:///C:/Users/denis/Uni/Year%202/COMP0016/impl-graphing
-trueskill==0.4.5
+tenacity==8.2.2
 typing_extensions==4.5.0
-ujson==5.7.0
-urllib3==1.26.9
 Werkzeug==2.2.3
 wordcloud==1.8.2.2
-wrapt==1.15.0
