--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,24 +1,3 @@
-circlify==0.15.0
-click==8.1.3
-colorama==0.4.6
-contourpy==1.0.7
-cycler==0.11.0
-Flask==2.2.3
-Flask-Cors==3.0.10
-fonttools==4.39.3
-itsdangerous==2.1.2
-Jinja2==3.1.2
-kiwisolver==1.4.4
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-numpy==1.24.2
-packaging==23.0
-Pillow==9.4.0
-plotly==5.14.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-six==1.16.0
-tenacity==8.2.2
-typing_extensions==4.5.0
-Werkzeug==2.2.3
-wordcloud==1.8.2.2
+truelearn
+flask
+flask_cors
